--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 </head>
 
 <body>
-
+    <header class="container-fluid">
+        <div class="row">
+            <div class="col header"></div>
+        </div>
+    </header>
 </body>
 
 </html>
