start-portfolio-added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
             <div class="col header"></div>
         </div>
     </header>
+
+    <main>
+        <section class="jumbo">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col jumbo-col"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-lg-4"></div>
+                    <div class="col-sm-6 col-lg-4"></div>
+                    <div class="col-sm-6 col-lg-4"></div>
+                    <div class="col-sm-6 col-lg-4"></div>
+                    <div class="col-sm-6 col-lg-4"></div>
+                    <div class="col-sm-6 col-lg-4"></div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 
 </html>
