header-col-added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 <body>
     <header class="container-fluid">
         <div class="row">
-            <div class="col header"></div>
+            <div class="col header">
+                <div class="row h-100">
+                    <div class="col h-100 border"></div>
+                    <div class="col h-100 border"></div>
+                </div>
+            </div>
         </div>
     </header>
 
