--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="row">
             <div class="col header">
                 <div class="row h-100">
-                    <div class="col h-100 border"></div>
-                    <div class="col h-100 border"></div>
+                    <div class="col h-100 brdr"></div>
+                    <div class="col h-100 brdr"></div>
                 </div>
             </div>
         </div>
@@ -41,6 +41,14 @@
                     <div class="col-sm-6 col-lg-4"></div>
                     <div class="col-sm-6 col-lg-4"></div>
                     <div class="col-sm-6 col-lg-4"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col h-100 brdr"></div>
                 </div>
             </div>
         </section>
