--- a/index.html
+++ b/index.html
@@ -52,7 +52,33 @@
                 </div>
             </div>
         </section>
+
+        <section class="contact-me">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col h-100 brdr"></div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="top-footer">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col h-100 brdr"></div>
+                </div>
+            </div>
+        </div>
+        <div class="bottom-footer">
+            <div class="container">
+                <div class="row bottom-footer">
+                    <div class="col h-100 brdr"></div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 
