--- a/index.html
+++ b/index.html
@@ -34,29 +34,56 @@
 
         <section class="portfolio">
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-lg-4"></div>
-                    <div class="col-sm-6 col-lg-4"></div>
-                    <div class="col-sm-6 col-lg-4"></div>
-                    <div class="col-sm-6 col-lg-4"></div>
-                    <div class="col-sm-6 col-lg-4"></div>
-                    <div class="col-sm-6 col-lg-4"></div>
+                <div class="row gy-1">
+                    <div class="col-12"></div>
+                    <div class="col-md-6 col-lg-4"></div>
+                    <div class="col-md-6 col-lg-4"></div>
+                    <div class="col-md-6 col-lg-4"></div>
+                    <div class="col-md-6 col-lg-4"></div>
+                    <div class="col-md-6 col-lg-4"></div>
+                    <div class="col-md-6 col-lg-4"></div>
                 </div>
             </div>
         </section>
 
         <section class="about">
             <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col h-100 brdr"></div>
+                <div class="row">
+                    <div class="col brdr">
+                        about + stella
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4 offset-lg-2 brdr">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ea aut corporis
+                        nisi corrupti eveniet unde delectus sed ducimus rem dolorum sint voluptates, placeat labore cum
+                        veniam qui illum vitae.
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 brdr">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ea aut corporis
+                        nisi corrupti eveniet unde delectus sed ducimus rem dolorum sint voluptates, placeat labore cum
+                        veniam qui illum vitae.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 brdr">
+                        button
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="contact-me">
-            <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col h-100 brdr"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col brdr">
+                        contact me
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col offset-lg-2 col-lg-8 brdr">
+                        form
+                    </div>
                 </div>
             </div>
         </section>
@@ -64,9 +91,11 @@
 
     <footer>
         <div class="top-footer">
-            <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col h-100 brdr"></div>
+            <div class="container">
+                <div class="row g-3">
+                    <div class="col-12 col-md-4 brdr">1</div>
+                    <div class="col-12 col-md-4 brdr">2</div>
+                    <div class="col-12 col-md-4 brdr">3</div>
                 </div>
             </div>
         </div>
