--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -39,9 +42,35 @@
 
     <main>
         <section id="jumbo">
-            <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col jumbo-col"></div>
+            <div class="container">
+                <div class="row ">
+                    <div class="col d-flex justify-content-center">
+                        <img src="./img/avatar.svg" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex justify-content-center">
+                        <h2 class="text-white my-2 fs-1">START BOOTSTRAP</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="offset-2 col-8 offset-md-4 col-md-4">
+                        <div class="row">
+                            <div class="col">
+                                <hr class="text-white fs-1 position-relative">
+                            </div>
+                            <div class="col-1 d-flex justify-content-center fs-1 text-white"><i class="fas fa-star"></i>
+                            </div>
+                            <div class="col">
+                                <hr class="text-white fs-1 position-relative">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex justify-content-center">
+                        <p class="text-white fs-6 text">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+                    </div>
                 </div>
             </div>
         </section>
