--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="row">
                     <div class="col d-flex justify-content-center">
-                        <p class="text-white fs-6 text">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+                        <p class="text-white text my-2">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
                     </div>
                 </div>
             </div>
