--- a/index.html
+++ b/index.html
@@ -57,34 +57,65 @@
                     <div class="offset-2 col-8 offset-md-4 col-md-4">
                         <div class="row">
                             <div class="col">
-                                <hr class="text-white fs-1 position-relative">
+                                <hr class="text-white position-relative">
                             </div>
                             <div class="col-1 d-flex justify-content-center fs-1 text-white"><i class="fas fa-star"></i>
                             </div>
                             <div class="col">
-                                <hr class="text-white fs-1 position-relative">
+                                <hr class="text-white position-relative">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col d-flex justify-content-center">
-                        <p class="text-white text my-2">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+                        <p class="text-white text my-3 fw-bold">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="portfolio">
+        <section id="portfolio" class="my-4">
             <div class="container">
-                <div class="row gy-1">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <p class="fs-5 fw-bold">PORTFOLIO</p>
+                    </div>
+                    <div class="offset-2 col-8 offset-md-4 col-md-4">
+                        <div class="row">
+                            <div class="col">
+                                <hr class="position-relative">
+                            </div>
+                            <div class="col-1 d-flex justify-content-center fs-1 "><i class="fas fa-star"></i>
+                            </div>
+                            <div class="col">
+                                <hr class="position-relative">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row gy-3">
                     <div class="col-12"></div>
-                    <div class="col-md-6 col-lg-4"></div>
-                    <div class="col-md-6 col-lg-4"></div>
-                    <div class="col-md-6 col-lg-4"></div>
-                    <div class="col-md-6 col-lg-4"></div>
-                    <div class="col-md-6 col-lg-4"></div>
-                    <div class="col-md-6 col-lg-4"></div>
+                    <div class="col-md-6 col-lg-4 d-flex justify-content-center">
+                        <img src="./img/cabin.png" alt="">
+                    </div>
+                    <div class="col-md-6 col-lg-4 d-flex justify-content-center">
+                        <img src="./img/cake.png" alt="">
+                    </div>
+                    <div class="col-md-6 col-lg-4 d-flex justify-content-center">
+                        <img src="./img/circus.png" alt="">
+                    </div>
+                    <div class="col-md-6 col-lg-4 d-flex justify-content-center">
+                        <img src="./img/game.png" alt="">
+                    </div>
+                    <div class="col-md-6 col-lg-4 d-flex justify-content-center">
+                        <img src="./img/safe.png" alt="">
+                    </div>
+                    <div class="col-md-6 col-lg-4 d-flex justify-content-center">
+                        <img src="./img/submarine.png" alt="">
+                    </div>
+
                 </div>
             </div>
         </section>
