--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
 
     <main>
-        <section id="jumbo">
+        <section id="jumbo" class="py-4">
             <div class="container">
                 <div class="row ">
                     <div class="col d-flex justify-content-center">
@@ -94,7 +94,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="row gy-3">
                     <div class="col-12"></div>
                     <div class="col-md-6 col-lg-4 d-flex justify-content-center">
@@ -120,28 +119,44 @@
             </div>
         </section>
 
-        <section id="about">
-            <div class="container h-100">
-                <div class="row">
-                    <div class="col brdr">
-                        about + stella
+        <section id="about" class="py-4">
+            <div class="container">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 text-center text-white">
+                            <p class="fs-5 fw-bold">ABOUT</p>
+                        </div>
+                        <div class="offset-4 col-4 offset-md-4 col-md-4">
+                            <div class="row text-white">
+                                <div class="col">
+                                    <hr class="position-relative">
+                                </div>
+                                <div class="col-1 d-flex justify-content-center fs-1 "><i class="fas fa-star"></i>
+                                </div>
+                                <div class="col">
+                                    <hr class="position-relative">
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4 offset-lg-2 brdr">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ea aut corporis
-                        nisi corrupti eveniet unde delectus sed ducimus rem dolorum sint voluptates, placeat labore cum
-                        veniam qui illum vitae.
+                    <div class="row text-white g-3 my-3">
+                        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+                            <div class="p px-2">Freelancer is a free bootstrap theme created by Start Bootstrap.
+                                The
+                                download includes the complete source files including HTML, CSS, and Javascript as well
+                                as optional LESS stylesheets for easy customization</div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <p class="px-2">Whether you're a student looking to showcase your work, a professional
+                                looking to attract clients, or a graphic artist looking to share your projects, this
+                                template is the perfect starting point!</p>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 brdr">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ea aut corporis
-                        nisi corrupti eveniet unde delectus sed ducimus rem dolorum sint voluptates, placeat labore cum
-                        veniam qui illum vitae.
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 brdr">
-                        button
+                    <div class="row">
+                        <div class="col-12 d-flex justify-content-center">
+                            <button type="button" class="btn btn-outline-light"><i
+                                    class="fas fa-download text-white"></i> Light</button>
+                        </div>
                     </div>
                 </div>
             </div>
